--- a/index.html
+++ b/index.html
@@ -27,22 +27,7 @@ html::-webkit-scrollbar-thumb{
 .main{
     background-image: url('../images/IMG_20221004_102547.jpg');
     background-size: cover;
-    background-position: center;
-    width: 100%;
-    height: 70vh;
-}
-.navbar{
-    width: 85%;
-    height: auto;
-    display: flex;
-    padding: 35px 0;
-    align-items: center;
-    justify-content: space-between;
-}
-.logo{
-    margin-left: 2em;
-    font-size: 2em;
-    color: #dfc84b;
+    background
     text-transform: uppercase;
     font-family: Rage Italic;
     font-weight: bold;
@@ -476,20 +461,8 @@ p.cp span{
 }
 
 h2{
-    font-size: 15px;
-    margin-top: 1em;
-    text-align: center;
-}
-.row-container p{
-    font-family: calibri;
-    font-size: .5em;
-}
-p.cp{
-    font-size: 0.9em;
-    margin-top: 2.9em;
-    text-align: center;
-}
-}
+    font-
+
    </style>
 </head>
 <body>
