--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="navbar">
 
             <!-------------Logo------------->
-            <label class="logo">Novan</label>
+            <label class="logo" style="color:blue;">Novan</label>
             <!-------------End Logo--------->
 
             <!-------------Search----------->
